config/gateways/gateway.yaml
apiVersion: tentacle.joyautomation.com/v1
kind: Gateway
metadata:
  name: gateway
spec:
  devices:
    client4:
      deadband:
        maxTime: 30000
        minTime: 2500
        value: 1
      host: client4
      protocol: ethernetip
      scanRate: 2500
      slot: 0
    gateway:
      autoManaged: true
      deadband:
        maxTime: 30000
        minTime: 2500
        value: 1
      protocol: gateway
    mqtt:
      autoManaged: true
      deadband:
        maxTime: 30000
        minTime: 2500
        value: 1
      protocol: mqtt
    network:
      autoManaged: true
      deadband:
        maxTime: 30000
        minTime: 2500
        value: 1
      protocol: network
  udtTemplates:
    Analog_Input:
      name: Analog_Input
      members:
        - name: RAWMIN
          datatype: number
        - name: RAWMAX
          datatype: number
        - name: HHSP
          datatype: number
        - name: LSP
          datatype: number
        - name: VALUE
          datatype: number
      version: "1.0"
    NetworkInterface:
      name: NetworkInterface
      members:
        - name: operstate
          datatype: string
        - name: carrier
          datatype: boolean
        - name: speed
          datatype: number
        - name: mtu
          datatype: number
        - name: mac
          datatype: string
        - name: rxBytes
          datatype: number
        - name: txBytes
          datatype: number
        - name: rxPackets
          datatype: number
        - name: txPackets
          datatype: number
        - name: rxErrors
          datatype: number
        - name: txErrors
          datatype: number
        - name: rxDropped
          datatype: number
        - name: txDropped
          datatype: number
      version: "1.0"
  udtVariables:
    RTU45_RECLM_PIT_001:
      deviceId: client4
      historyEnabled: true
      id: RTU45_RECLM_PIT_001
      memberCipTypes:
        HHSP: REAL
        LSP: REAL
        RAWMAX: REAL
        RAWMIN: REAL
        VALUE: REAL
      memberTags:
        HHSP: RTU45_RECLM_PIT_001.HHSP
        LSP: RTU45_RECLM_PIT_001.LSP
        RAWMAX: RTU45_RECLM_PIT_001.RAWMAX
        RAWMIN: RTU45_RECLM_PIT_001.RAWMIN
        VALUE: RTU45_RECLM_PIT_001.VALUE
      tag: RTU45_RECLM_PIT_001
      templateName: Analog_Input
    eno1:
      deviceId: network
      id: eno1
      memberTags:
        carrier: eno1_carrier
        mac: eno1_mac
        mtu: eno1_mtu
        operstate: eno1_operstate
        rxBytes: eno1_rxBytes
        rxDropped: eno1_rxDropped
        rxErrors: eno1_rxErrors
        rxPackets: eno1_rxPackets
        speed: eno1_speed
        txBytes: eno1_txBytes
        txDropped: eno1_txDropped
        txErrors: eno1_txErrors
        txPackets: eno1_txPackets
      tag: eno1
      templateName: NetworkInterface
    eno2:
      deviceId: network
      id: eno2
      memberTags:
        carrier: eno2_carrier
        mac: eno2_mac
        mtu: eno2_mtu
        operstate: eno2_operstate
        rxBytes: eno2_rxBytes
        rxDropped: eno2_rxDropped
        rxErrors: eno2_rxErrors
        rxPackets: eno2_rxPackets
        speed: eno2_speed
        txBytes: eno2_txBytes
        txDropped: eno2_txDropped
        txErrors: eno2_txErrors
        txPackets: eno2_txPackets
      tag: eno2
      templateName: NetworkInterface
    eth0:
      deviceId: network
      id: eth0
      memberTags:
        carrier: eth0_carrier
        mac: eth0_mac
        mtu: eth0_mtu
        operstate: eth0_operstate
        rxBytes: eth0_rxBytes
        rxDropped: eth0_rxDropped
        rxErrors: eth0_rxErrors
        rxPackets: eth0_rxPackets
        speed: eth0_speed
        txBytes: eth0_txBytes
        txDropped: eth0_txDropped
        txErrors: eth0_txErrors
        txPackets: eth0_txPackets
      tag: eth0
      templateName: NetworkInterface
    lo:
      deviceId: network
      id: lo
      memberTags:
        carrier: lo_carrier
        mac: lo_mac
        mtu: lo_mtu
        operstate: lo_operstate
        rxBytes: lo_rxBytes
        rxDropped: lo_rxDropped
        rxErrors: lo_rxErrors
        rxPackets: lo_rxPackets
        speed: lo_speed
        txBytes: lo_txBytes
        txDropped: lo_txDropped
        txErrors: lo_txErrors
        txPackets: lo_txPackets
      tag: lo
      templateName: NetworkInterface
    tailscale0:
      deviceId: network
      id: tailscale0
      memberTags:
        carrier: tailscale0_carrier
        mac: tailscale0_mac
        mtu: tailscale0_mtu
        operstate: tailscale0_operstate
        rxBytes: tailscale0_rxBytes
        rxDropped: tailscale0_rxDropped
        rxErrors: tailscale0_rxErrors
        rxPackets: tailscale0_rxPackets
        speed: tailscale0_speed
        txBytes: tailscale0_txBytes
        txDropped: tailscale0_txDropped
        txErrors: tailscale0_txErrors
        txPackets: tailscale0_txPackets
      tag: tailscale0
      templateName: NetworkInterface
  variables:
    client4/RTU45_RECLM_PIT_001_PI:
      cipType: INT
      datatype: number
      default: 0
      deviceId: client4
      id: client4/RTU45_RECLM_PIT_001_PI
      tag: RTU45_RECLM_PIT_001_PI
